Add Javadoc placeholders